--- a/selab/research/styles/research.css
+++ b/selab/research/styles/research.css
@@ -1,15 +1,19 @@
 /*.contents a{
 	color: gray;
-}*/
-.contents .hidden{
-	display: none;
+  }*/
+  .contents .hidden{
+   display: none;
+ }
+
+#title{
+  font-size: 20px;
 }
 .contents h3{
 	background-color: #C4C4C4;
 	color: #404040;
-	font-size: 20px;
 	padding: 10px;
 	margin-bottom:10px;
+  font-size: 20px;
 }
 /*íƒ­ë°” css ì‹œìž‘*/
 /* input[type=radio]{display:none;} */
@@ -26,11 +30,12 @@
 	padding-bottom: 10px;
 	background-color: white;
 }
-.contents ul{
+
+#main{
+  font-size: 18px;
 }
 .contents .subject li{
 	margin: 5px;
-	font-size: 18px;
 	list-style : square;
 }
 #long{
@@ -66,41 +71,41 @@
 }
 /*-----------------researches end-------------------------*/
 .contents #register{
-    position: absolute;
-    top: 150px;
-    left: 50%;
-    width: 690px;
-    margin-left:-345px;
-    color:#4796bd;
-    border-radius: 5px;
-    border: 2px solid #4796bd;
-    font-size: 15px;
-    font-weight: normal;
-    background-color: #f4f4f4;
-    box-shadow: 0 3px 10px black;
-    z-index: 1;
+  position: absolute;
+  top: 150px;
+  left: 50%;
+  width: 690px;
+  margin-left:-345px;
+  color:#4796bd;
+  border-radius: 5px;
+  border: 2px solid #4796bd;
+  font-size: 15px;
+  font-weight: normal;
+  background-color: #f4f4f4;
+  box-shadow: 0 3px 10px black;
+  z-index: 1;
 }
 .contents #register .subwrap{
-    width: 660px;
-    margin: 15px;
-	margin-top: 0;
-	margin-bottom: 0;
-    overflow: hidden;
+  width: 660px;
+  margin: 15px;
+  margin-top: 0;
+  margin-bottom: 0;
+  overflow: hidden;
 }
 .contents #register .subwrap p{
-    margin: 0;
-    padding: 0;
-	float: left
+  margin: 0;
+  padding: 0;
+  float: left
 }
 .contents #register input[type="text"]{
-    padding: 0;
-	margin-top:7px;
-	margin-bottom:7px;
-    border: none;
-    height: 30px;
-    font-size: 15px;
-    font-weight: 100;
-    padding-left: 10px;
+  padding: 0;
+  margin-top:7px;
+  margin-bottom:7px;
+  border: none;
+  height: 30px;
+  font-size: 15px;
+  font-weight: 100;
+  padding-left: 10px;
 }
 .contents #register #Project_name{
 	width: 648px;
@@ -114,36 +119,36 @@
 	width: 250px;
 }
 .contents #register .subname{
-    margin: 0;
-    padding: 0;
-    display: inline;
-    float: left;
-    padding-top: 11px;
-    margin-right: 10px;
+  margin: 0;
+  padding: 0;
+  display: inline;
+  float: left;
+  padding-top: 11px;
+  margin-right: 10px;
 }
 
 .contents #register #title-name{
 	margin: 15px;
-    font-size: 30px;
-    padding-top: 3px;
+  font-size: 30px;
+  padding-top: 3px;
 }
 .contents #register #buttons{
 	margin-bottom: 15px;
 	float: right;
 }
 .contents #register #buttons button{
-    outline: none;
-    border: none;
-    border-radius: 3px;
-    background-color: #4796bd;
-    width: 110px;
-    color: white;
-    font-size: 15px;
-    height: 40px;
-    margin-left:10px;
+  outline: none;
+  border: none;
+  border-radius: 3px;
+  background-color: #4796bd;
+  width: 110px;
+  color: white;
+  font-size: 15px;
+  height: 40px;
+  margin-left:10px;
 }
 .contents #register #buttons button:hover{
-    background-color: rgb(41, 112, 148);
+  background-color: rgb(41, 112, 148);
 }
 /*-----------register end-----------------*/
 .add_btn{
@@ -156,7 +161,7 @@
 #hl{
 	height: 5px;
   padding: 0px;
-	background-color: #C4C4C4;
+  background-color: #C4C4C4;
   clear: both;
 }
 
@@ -165,7 +170,6 @@
   line-height: 48px; /* height(#class a) */ /* for vertical align */
   text-align: center;
   background-color: #C4C4C4;
-  font-size: 20px;
   font-weight: 300;
   color: white;
   display: inline-block;
