--- a/selab/gallery/styles/gallery.css
+++ b/selab/gallery/styles/gallery.css
@@ -83,14 +83,14 @@ select {
 	font-size: 15px;
 }
 .tile {
-	width: 195px;
-	height: 160px;
-	margin : 5px;
+	width: 20%;
+	height: 140px;
+	margin : 1.5%;
 	margin-bottom: 15px;
 	background-color: white;
 	color: gray;
 	cursor: pointer;
-	padding: 10px;
+	padding: 1%;
 }
 
 .tile:hover{
@@ -101,8 +101,8 @@ select {
 }
 
 .tile img{
-	width: 198px;
-	height: 130px;
+	width: 100%;
+	height: 80%;
 	padding-bottom: 5px;
 }
 
@@ -166,7 +166,7 @@ select {
 	border-radius: 3px 3px 0px 0px;
 }
 .back{
-	padding: 10px;
+	/* padding: 10px; */
 	/* background-color: #f5f5f5; */
 	margin-bottom: 10px;
 }
