--- a/selab/login/style/log.css
+++ b/selab/login/style/log.css
@@ -14,12 +14,45 @@ body {
   height: 310px;
 }
 
-.login {
+#choose {
+  width : 60%;
+  height: 230px;
+  padding-top: 80px;
+  float: left;
+  background-color: white;
+  color: grey;
+  margin: 0;
+  text-align: center;
+}
+
+#choose p {
+  margin: 10px 0;
+  font-size: 11pt;
+}
+
+button {
+  background-color: #fe4a49;
+  width: 80%;
+  height: 50px;
+  border: none;
+  color: white;
+  font-size: 13pt;
+  text-align: center;
+  padding: 16px 32px;
+  cursor: pointer;
+}
+
+button:hover {
+  opacity: 80%;
+}
+
+#student, #researcher {
   width : 60%;
   height: 100%;
   float: left;
   background-color: white;
   color: #fe4a49;
+  display: none;
 }
 
 .side {
@@ -53,7 +86,7 @@ input[type=text], input[type=password] {
   margin-top: 8.5px;
 }
 
-#submit_button, #joinButton {
+.submit_button, .joinButton {
   background-color: #fe4a49;
   width: 100%;
   height: 50px;
