small change of card style and spelling
card style - transform size
spelling - 'taem' to 'team'

--- a/selab/courses/styles/card.css
+++ b/selab/courses/styles/card.css
@@ -110,10 +110,10 @@
 
 .langOption:hover{
   background-color: black;
+  transform: scale(1.2) perspective(1px)
   color: white;
 }
 
 .selectedlangOption:hover{
-  background-color: white;
-  color: black;
+ transform: scale(1.2) perspective(1px)
 }
