--- a/selab/gallery/styles/gallery.css
+++ b/selab/gallery/styles/gallery.css
@@ -192,3 +192,106 @@ select {
 .show {
 	display: block;
 }
+
+#imgM{
+	border-radius: 5px;
+	cursor: pointer;
+	transition: 0.3s;
+}
+
+/*https://www.w3schools.com/*/
+.modal {
+	display: none;
+	position: fixed;
+	z-index: 9999;
+	padding-top: 20px;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	overflow: auto;
+	background-color: rgb(0,0,0);
+	background-color: rgba(0,0,0,0.8);
+	object-fit: contain;
+}
+
+.modal-content {
+	margin: auto;
+	display: block;
+	max-width: 700px;
+	object-fit: contain;
+	height: 90%;
+	width: 90%;
+}
+
+.modal-content, #caption {
+	animation-name: zoom;
+	animation-duration: 0.6s;
+}
+
+@keyframes zoom {
+	from {transform:scale(0)}
+	to {transform:scale(1)}
+}
+
+.close {
+	position: absolute;
+	top: 15px;
+	right: 35px;
+	color: #f1f1f1;
+	font-size: 40px;
+	font-weight: bold;
+	transition: 0.3s;
+	float: right;
+}
+
+.close:hover,.close:focus {
+	color: #bbb;
+	text-decoration: none;
+	cursor: pointer;
+}
+
+/* 100% Image Width on Smaller Screens */
+@media only screen and (max-width: 700px){
+	.modal-content {
+		width: 100%;
+	}
+}
+
+/*https://www.w3schools.com/*/
+.dropdown {
+	position: relative;
+	display: inline-block;
+	margin-left: 15px;
+}
+
+#sharebtn{
+	color: white;
+	padding: 16px;
+	font-size: 16px;
+	border: none;
+}
+
+.dropdown-content {
+	display: none;
+	position: absolute;
+	background-color: #f1f1f1;
+	min-width: 160px;
+	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+	z-index: 1;
+}
+
+.dropdown-content a {
+	color: black;
+	padding: 12px 16px;
+	text-decoration: none;
+	display: block;
+}
+
+
+.dropdown-content a:hover {background-color: #ddd;}
+
+.dropdown:hover .dropdown-content {
+	display: block;
+}
+
