--- a/selab/contact/styles/contact.css
+++ b/selab/contact/styles/contact.css
@@ -18,10 +18,10 @@
 }
 
 #map{
-	width: 440px;
-	height: 440px;
+	width: 50%;
 	margin-left: 10px;
 	margin-right: 30px;
+	margin-top: 10px;
 	float: left;
 }
 
