--- a/selab/common/styles/common.css
+++ b/selab/common/styles/common.css
@@ -319,10 +319,28 @@ select #backselect option[value="1"]{
 	color: #fe4a49;
 	display: block;
 	float: left;
-	vertical-align: text-bottom;
 }
 
 #sideNav .nav-list-left #sideSetting:hover, #sideNav .nav-list-left #sideContact:hover, #sideNav .nav-list-right a.selected, #sideNav .nav-list-right a:hover{
   background-color: #fe4a49;
 	color: white;
+}
+
+#submit {
+    border: 1.2px solid rgb(70, 118, 166);
+    border-radius: 2px;
+    background-color: rgb(70, 118, 166);
+    color: #fff;
+    transition: all 0.25s ease-in-out;
+    width: 60px;
+    height: 25px;
+    font-size: 15px;
+    display: block;
+	margin-top: 10px;
+	float: right;
+}
+
+#submit:hover {
+    color: rgb(70, 118, 166);
+    background-color: #fff;;
 }
