--- a/selab/courses/styles/card.css
+++ b/selab/courses/styles/card.css
@@ -9,27 +9,50 @@
   line-height: 50px;
 }
 
+#team .teamMenu #by {
+  margin-left: 20px;
+  width: 100px;
+  height: 25px;
+  border: 1px solid black;
+  border-radius: 5px;
+  font-weight: bold;
+}
+
+#team .teamMenu a {
+  /* vertical-align: middle; */
+  margin: 0 10px;
+}
+
+img {
+  vertical-align: middle;
+}
+
 #team .team_none {
-  height: 260px;
-  padding: 25px 0;
+  height: 270px;
+  margin-bottom: 25px;
 }
 
 #team .team {
   display: block;
   float: none;
-  height: 330px;
+  height: 340px;
+  margin-bottom: 25px;
+}
+
+.cards {
+  display: inline-block;
+  width: 100%;
+  margin-top: 25px;
 }
 
 .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   width : 200px;
-  height: 250px;
-  max-width: 300px;
-  margin: 5px;
+  height: 270px;
   text-align: center;
   background-color: white;
   float: left;
-  margin-bottom: 10px;
+  margin-bottom: 25px;
   position:relative;
 }
 
@@ -38,13 +61,18 @@
   margin: 0;
 }
 
-.card .card_inner .card_name {
-  margin: 0;
-  padding: 10px 0;
+.card .card_inner p {
+  line-height: 1.2;
+  margin: 5px auto;
+}
+
+.card .card_inner p.card_t {
+  margin: 10px auto;
+  font-weight: bold;
 }
 
 .card .card_but {
-  width: 200px;
+  width: 100%;
   position: absolute;
   bottom: 0;
 }
@@ -73,7 +101,7 @@
 }
 
 .langOptions{
-  margin: 15px 5px;
+  margin: 0px 5px 25px;
 }
 
 .langOption{
