--- a/selab/courses/styles/courses.css
+++ b/selab/courses/styles/courses.css
@@ -52,6 +52,10 @@ td:last-child{
 .active a {
 	color: #ff6860;
 	font-weight: bold;
+	height: 40px;
+	width: 100%;
+	display: inline-block;
+	line-height: 40px;
 }
 
 .hovered{
