--- a/selab/courses/styles/card.css
+++ b/selab/courses/styles/card.css
@@ -152,8 +152,8 @@ img {
  transform: scale(1.2) perspective(1px)
 }
 
-.mypage, .myteam {
-  padding-top: 1px;
+.mypage, .myteam, .message {
+  padding: 10px 20px 20px;
   background-color: white;
 }
 
@@ -169,6 +169,12 @@ span {
 .mypage p {
   margin-left: 20px;
   margin-bottom: 15px;
+  line-height: 1.5;
+}
+
+.langlist {
+  line-height: 2;
+  margin-left: 20px;
 }
 
 input[type=text] {
@@ -196,9 +202,10 @@ div.teamname {
   margin-left: 20px;
 }
 
-div.mteamname, div.git {
-  display: inline-block;
+div.mteamname, div.git, div.teammember{
+  display: block;
   padding-left: 20px;
+  line-height: 2;
 }
 
 ul:not(.inline-list) {
@@ -210,14 +217,14 @@ ul:not(.inline-list) {
 input[type=submit], button[type=submit].submit {
   padding: 14px 20px;
   margin: 8px 0;
-  border: 1px solid black;
+  background-color: black;
+  color: white;
   border-radius: 4px;
   cursor: pointer;
 }
 
 input[type=submit]:hover, button[type=submit].submit:hover {
-  background-color: black;
-  color: white;
+  opacity: 0.8;
 }
 
 .center {
@@ -226,4 +233,60 @@ input[type=submit]:hover, button[type=submit].submit:hover {
 
 hr.div {
   margin: 0;
+}
+
+.mestitle {
+  margin: 10px 0 20px;
+}
+
+#mes_get ul, #mes_send ul{
+  clear: both;
+  overflow: hidden;
+  padding: 0;
+  margin: 0;
+}
+
+#mes_get li, #mes_send li {
+  box-sizing: border-box;
+  list-style: none;
+  line-height: 35px;
+}
+
+#mes_get li.person, #mes_send li.person {
+  width: 33.3%;
+  border-right: 1px solid #dfdfdf;
+  text-align: center;
+}
+
+#mes_get li.time, #mes_send li.time {
+  width: 33.3%;
+  border-right: 1px solid #dfdfdf;
+  text-align: center;
+}
+
+#mes_get li.but, #mes_send li.but {
+  width: 33.3%;
+  text-align: center;
+}
+
+#mes_get li.but input, #mes_send li.but input {
+  padding: 5px 20px;
+  margin: 0;
+}
+
+#mes_get .subject li, #mes_send .subject {
+  background-color: #C4C4C4;
+  height: 38px;
+  color: white;
+  border-bottom: 3px solid #dfdfdf;
+}
+
+#mes_get .mes li, #mes_send .mes li {
+  background-color: white;
+  height: 35px;
+  border-bottom: 1px solid #dfdfdf;
+}
+
+#mes_get .mes:nth-child(odd) li, #mes_send .mes:nth-child(even) li {
+  background-color: #f5f5f5;
 }
