--- a/selab/common/styles/common.css
+++ b/selab/common/styles/common.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,100,900italic);
-@import url(../../../fonts.googleapis.com/earlyaccess/nanumgothic.css);
+@import url('https://fonts.googleapis.com/css?family=Nanum+Gothic&display=swap');
 @import url(https://fonts.googleapis.com/css?family=Abel);
 
 html{
