--- a/selab/courses/styles/card.css
+++ b/selab/courses/styles/card.css
@@ -216,7 +216,7 @@ ul:not(.inline-list) {
   list-style-position: inside;
 }
 
-input[type=submit], button[type=submit].submit, button {
+input[type=submit], button[type=submit].submit, button.secession {
   padding: 14px 20px;
   margin: 8px 0;
   background-color: #6e6e6e;
@@ -226,7 +226,7 @@ input[type=submit], button[type=submit].submit, button {
   border : none;
 }
 
-input[type=submit]:hover, button[type=submit].submit:hover, button:hover {
+input[type=submit]:hover, button[type=submit].submit:hover, button.secession:hover {
   opacity: 0.8;
 }
 
